--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,11 +125,15 @@ nav a:hover::before {
 
 footer {
     position: absolute;
-    top: 90%;
+    top: 95%;
     left: 30%;
     right: 30%;
     width: 40%;
-    height: 50px;
+    height: 20px;
     background-color: rgba(233, 159, 177, 0.25);
     border-radius: 10px;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    font-family: Calibri;
 }
