--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,8 +139,16 @@ nav a:hover::before {
     width: 400px;
     background-color: rgba(233, 159, 177, 0.25);
     border-radius: 10px;
+    padding: 20px;       
+}
+
+.img-about {
+    height: 600px;
+    width: 400px;
+    background-color: rgba(233, 159, 177, 0.25);
+    border-radius: 10px;
     padding: 20px;
-    
+    background-image: url(../img/img-about.jpg);
 }
 
 footer {
