--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
 body
 
  {
-    background-image: url(../img/background.jpg);
-    background-size: 100%;
+    background-image: url(../img/gplaypattern.png);
+    background-repeat: inherit;
  }
 
 .nav {
@@ -54,14 +54,14 @@ nav a {
 /*https://www.youtube.com/watch?v=FEmysQARWFU used this video to make a hover over animation using pseudo class elements */
 
 nav a:hover {
-    color: rgb(203, 206, 65);
+    color: rgb(189, 8, 8);
 }
 
 nav a::before {
     content: '';
     display: block;
     height: 3px; 
-    background-color: rgb(203, 206, 65);
+    background-color: rgb(189, 8, 8);
 
     position: absolute;
     top: 0;
@@ -100,7 +100,7 @@ span {
     font-family: Calibri;
     font-size: 60px;
     font-weight: 400;
-    color: rgb(203, 206, 65);
+    color: rgb(189, 8, 8);
     text-align: left;
 }
 
