--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,7 @@ nav ul {
     float: right;
     display: flex;
 
-    /* used link below to learn how to fix nav bar elements being in th wrong order https://stackoverflow.com/questions/67432376/why-are-the-nav-bar-links-in-the-wrong-order */
+    /* fixed nav bar elements being in th wrong order https://stackoverflow.com/questions/67432376/why-are-the-nav-bar-links-in-the-wrong-order */
     
 }
 
@@ -191,16 +191,48 @@ span {
     display:flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     top: 20%;
     left: 15%;
     right: 15%;
     height: 80%;
     width: 70%;
+    padding: 20px;
     background-color: rgba(50, 100, 67, 0.25);
     border-radius: 10px;
-    padding: 20px;
+    font-family: Calibri; 
+    font-size: 20px;
+    color:  rgb(65, 60, 61);
 }
 
+.contact-me {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    width: 60%;
+    height: 100%;
+
+}
+
+h2 {
+    position: relative;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.field {
+    width: 100%;
+    padding: 3px;
+    background-color: rgb(210, 233, 203);
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.field:hover {
+    background-color: rgb(232, 255, 225);
+}
 
 footer {
     position: absolute;
