added button and styles to it

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,16 +187,16 @@ span {
 }
 
 .flex-container-contact {
-    position: relative;
+    position: absolute;
     display:flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     top: 20%;
-    left: 15%;
+    left: 20%;
     right: 15%;
-    height: 80%;
-    width: 70%;
+    height: 55%;
+    width: 60%;
     padding: 20px;
     background-color: rgba(50, 100, 67, 0.25);
     border-radius: 10px;
@@ -225,6 +225,7 @@ h2 {
 .field {
     width: 100%;
     padding: 3px;
+    border-radius: 5px;
     background-color: rgb(210, 233, 203);
     font-size: 14px;
     margin-bottom: 25px;
@@ -232,6 +233,18 @@ h2 {
 
 .field:hover {
     background-color: rgb(232, 255, 225);
+}
+
+.area {
+    min-height: 200px;
+}
+
+.btn { 
+    width: 30%;
+    padding: 5px;
+    font-size: 14px;
+    background-color: rgb(128, 121, 122);
+    border-radius: 5px;
 }
 
 footer {
