--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,8 +244,15 @@ h2 {
     width: 30%;
     padding: 5px;
     font-size: 14px;
-    background-color: rgb(128, 121, 122);
+    background-color: rgb(106, 179, 84);
+    border:  rgb(65, 60, 61) solid 0.5px;
     border-radius: 5px;
+    
+}
+
+.btn:hover {
+    background-color: rgb(232, 255, 225);
+    cursor: pointer; 
 }
 
 footer {
@@ -262,30 +269,4 @@ footer {
     font-size: 16px;
     font-family: Calibri;
     box-shadow: 0px 0px 5px 1px rgb(128, 121, 122);
-}
-
-/*MEDIA QUERIES*/
-
-@media screen and (max-width: 900px) {
-    header {
-        height: 40px;
-    }
-
-    nav ul li a {
-        
-        font-size: 14px;
-        display: flex;
-        align-content: space-around;
-        wrap: nowrap;
-
-    }
-
-    #intro {
-        font-size: 30px;
-    }
-    span {
-        font-size: 35px;
-    }
-
-
 }
